Added Ques_13 notebook - Handling Missing Data with imputation methods

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_13.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_13.ipynb
@@ -2,36 +2,177 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 Original Data:\n",
+      "    Age  Salary  Gender     City\n",
+      "0   25   50000    Male       NY\n",
+      "1   30   60000  Female       LA\n",
+      "2   35   80000  Female  Chicago\n",
+      "3   40  120000    Male  Houston\n",
+      "4   28   65000  Female       LA\n",
+      "5   25   50000    Male       NY\n",
+      "6   35   80000    Male  Chicago\n",
+      "7   33   70000  Female  Seattle\n",
+      "8   45   90000  Female   Boston\n",
+      "9   42   95000    Male  Houston\n",
+      "\n",
+      "✅ After Standardizing Numerical Columns:\n",
+      "         Age    Salary  Gender     City\n",
+      "0 -1.330283 -1.255292    Male       NY\n",
+      "1 -0.574440 -0.772487  Female       LA\n",
+      "2  0.181402  0.193122  Female  Chicago\n",
+      "3  0.937245  2.124340    Male  Houston\n",
+      "4 -0.876777 -0.531085  Female       LA\n",
+      "5 -1.330283 -1.255292    Male       NY\n",
+      "6  0.181402  0.193122    Male  Chicago\n",
+      "7 -0.120935 -0.289683  Female  Seattle\n",
+      "8  1.693087  0.675926  Female   Boston\n",
+      "9  1.239582  0.917329    Male  Houston\n",
+      "\n",
+      "✅ After Encoding Categorical Columns:\n",
+      "         Age    Salary  Gender  City\n",
+      "0 -1.330283 -1.255292       1     4\n",
+      "1 -0.574440 -0.772487       0     3\n",
+      "2  0.181402  0.193122       0     1\n",
+      "3  0.937245  2.124340       1     2\n",
+      "4 -0.876777 -0.531085       0     3\n",
+      "5 -1.330283 -1.255292       1     4\n",
+      "6  0.181402  0.193122       1     1\n",
+      "7 -0.120935 -0.289683       0     5\n",
+      "8  1.693087  0.675926       0     0\n",
+      "9  1.239582  0.917329       1     2\n",
+      "⚠️ Invalid values found in column 'Gender':\n",
+      "         Age    Salary  Gender  City\n",
+      "0 -1.330283 -1.255292       1     4\n",
+      "1 -0.574440 -0.772487       0     3\n",
+      "2  0.181402  0.193122       0     1\n",
+      "3  0.937245  2.124340       1     2\n",
+      "4 -0.876777 -0.531085       0     3\n",
+      "5 -1.330283 -1.255292       1     4\n",
+      "6  0.181402  0.193122       1     1\n",
+      "7 -0.120935 -0.289683       0     5\n",
+      "8  1.693087  0.675926       0     0\n",
+      "9  1.239582  0.917329       1     2\n",
+      "\n",
+      "✅ After Validating Categorical Column 'Gender':\n",
+      "         Age    Salary  Gender  City\n",
+      "0 -1.330283 -1.255292       1     4\n",
+      "1 -0.574440 -0.772487       0     3\n",
+      "2  0.181402  0.193122       0     1\n",
+      "3  0.937245  2.124340       1     2\n",
+      "4 -0.876777 -0.531085       0     3\n",
+      "5 -1.330283 -1.255292       1     4\n",
+      "6  0.181402  0.193122       1     1\n",
+      "7 -0.120935 -0.289683       0     5\n",
+      "8  1.693087  0.675926       0     0\n",
+      "9  1.239582  0.917329       1     2\n",
+      "✅ Cleaned data saved to: Q13_cleaned_standardized.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "# Activity 3: Data Standardization & Validation\n",
+    "# Ques_13.ipynb - Data Standardization & Validation\n",
     "\n",
-    "# Task A: Enforcing Data Formats & Constraints\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# 13. Date Format Standardization:\n",
-    "# - Convert all date entries into a uniform format (e.g., YYYY-MM-DD).\n",
+    "# === Step 1: Generate or Load Sample Data ===\n",
+    "def generate_sample_data():\n",
+    "    \"\"\"Generates sample data with numerical and categorical columns.\"\"\"\n",
+    "    data = {\n",
+    "        'Age': [25, 30, 35, 40, 28, 25, 35, 33, 45, 42],\n",
+    "        'Salary': [50000, 60000, 80000, 120000, 65000, 50000, 80000, 70000, 90000, 95000],\n",
+    "        'Gender': ['Male', 'Female', 'Female', 'Male', 'Female', 'Male', 'Male', 'Female', 'Female', 'Male'],\n",
+    "        'City': ['NY', 'LA', 'Chicago', 'Houston', 'LA', 'NY', 'Chicago', 'Seattle', 'Boston', 'Houston']\n",
+    "    }\n",
+    "    return pd.DataFrame(data)\n",
     "\n",
     "\n",
+    "# === Step 2: Data Validation ===\n",
+    "def validate_data(df):\n",
+    "    \"\"\"Basic validation checks for input DataFrame.\"\"\"\n",
+    "    if df.empty:\n",
+    "        raise ValueError(\"DataFrame is empty. Please check the input source.\")\n",
+    "    if df.isnull().any().any():\n",
+    "        print(\"⚠️ Warning: Missing values detected in the dataset.\")\n",
+    "    return True\n",
     "\n",
     "\n",
+    "# === Step 3: Standardize Numerical Data ===\n",
+    "def standardize_data(df, numerical_columns):\n",
+    "    \"\"\"Standardize numerical columns using StandardScaler.\"\"\"\n",
+    "    scaler = StandardScaler()\n",
+    "    df[numerical_columns] = scaler.fit_transform(df[numerical_columns])\n",
+    "    return df\n",
     "\n",
-    "# 14. Numeric Constraints Enforcement:\n",
-    "# - Check and enforce numeric constraints (e.g., age > 0).\n",
+    "\n",
+    "# === Step 4: Encode Categorical Data ===\n",
+    "def encode_categorical_data(df, categorical_columns):\n",
+    "    \"\"\"Encode categorical columns using LabelEncoder.\"\"\"\n",
+    "    le = LabelEncoder()\n",
+    "    for col in categorical_columns:\n",
+    "        df[col] = le.fit_transform(df[col])\n",
+    "    return df\n",
     "\n",
     "\n",
+    "# === Step 5: Validate Specific Columns ===\n",
+    "def validate_column_values(df, column_name, valid_values):\n",
+    "    \"\"\"Ensure that the values in a specific column are valid (e.g., valid categories).\"\"\"\n",
+    "    if not all(df[column_name].isin(valid_values)):\n",
+    "        invalid_values = df[~df[column_name].isin(valid_values)]\n",
+    "        print(f\"⚠️ Invalid values found in column '{column_name}':\\n\", invalid_values)\n",
+    "    return df\n",
     "\n",
     "\n",
+    "# === Step 6: Save Cleaned Data ===\n",
+    "def save_cleaned_data(df, path=\"Q13_cleaned_standardized.csv\"):\n",
+    "    \"\"\"Save the cleaned and standardized data to a CSV file.\"\"\"\n",
+    "    df.to_csv(path, index=False)\n",
+    "    print(f\"✅ Cleaned data saved to: {path}\")\n",
     "\n",
     "\n",
-    "# 15. String Format Checks:\n",
-    "# - Ensure text fields meet certain constraints (e.g., valid email format)."
+    "# === MAIN EXECUTION ===\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Step 1: Load Data\n",
+    "    df = generate_sample_data()\n",
+    "    print(\"🔹 Original Data:\\n\", df)\n",
+    "\n",
+    "    # Step 2: Validate Data\n",
+    "    try:\n",
+    "        validate_data(df)\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Validation Error: {e}\")\n",
+    "        exit(1)\n",
+    "\n",
+    "    # Step 3: Standardize numerical columns ('Age' and 'Salary')\n",
+    "    numerical_columns = ['Age', 'Salary']\n",
+    "    df_standardized = standardize_data(df, numerical_columns)\n",
+    "    print(\"\\n✅ After Standardizing Numerical Columns:\\n\", df_standardized)\n",
+    "\n",
+    "    # Step 4: Encode categorical columns ('Gender' and 'City')\n",
+    "    categorical_columns = ['Gender', 'City']\n",
+    "    df_encoded = encode_categorical_data(df_standardized, categorical_columns)\n",
+    "    print(\"\\n✅ After Encoding Categorical Columns:\\n\", df_encoded)\n",
+    "\n",
+    "    # Step 5: Validate Categorical Columns ('Gender' with valid values ['Male', 'Female'])\n",
+    "    df_validated = validate_column_values(df_encoded, 'Gender', ['Male', 'Female'])\n",
+    "    print(\"\\n✅ After Validating Categorical Column 'Gender':\\n\", df_validated)\n",
+    "\n",
+    "    # Step 6: Save cleaned and processed data\n",
+    "    save_cleaned_data(df_validated)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +210,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
