Added Ques_13 notebook - Handling Missing Data with imputation methods

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_13.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -36,53 +36,66 @@
       "9  1.239582  0.917329    Male  Houston\n",
       "\n",
       "✅ After Encoding Categorical Columns:\n",
-      "         Age    Salary  Gender  City\n",
-      "0 -1.330283 -1.255292       1     4\n",
-      "1 -0.574440 -0.772487       0     3\n",
-      "2  0.181402  0.193122       0     1\n",
-      "3  0.937245  2.124340       1     2\n",
-      "4 -0.876777 -0.531085       0     3\n",
-      "5 -1.330283 -1.255292       1     4\n",
-      "6  0.181402  0.193122       1     1\n",
-      "7 -0.120935 -0.289683       0     5\n",
-      "8  1.693087  0.675926       0     0\n",
-      "9  1.239582  0.917329       1     2\n",
-      "⚠️ Invalid values found in column 'Gender':\n",
-      "         Age    Salary  Gender  City\n",
-      "0 -1.330283 -1.255292       1     4\n",
-      "1 -0.574440 -0.772487       0     3\n",
-      "2  0.181402  0.193122       0     1\n",
-      "3  0.937245  2.124340       1     2\n",
-      "4 -0.876777 -0.531085       0     3\n",
-      "5 -1.330283 -1.255292       1     4\n",
-      "6  0.181402  0.193122       1     1\n",
-      "7 -0.120935 -0.289683       0     5\n",
-      "8  1.693087  0.675926       0     0\n",
-      "9  1.239582  0.917329       1     2\n",
+      "         Age    Salary  Gender_Male  City_Chicago  City_Houston  City_LA  \\\n",
+      "0 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
+      "1 -0.574440 -0.772487          0.0           0.0           0.0      1.0   \n",
+      "2  0.181402  0.193122          0.0           1.0           0.0      0.0   \n",
+      "3  0.937245  2.124340          1.0           0.0           1.0      0.0   \n",
+      "4 -0.876777 -0.531085          0.0           0.0           0.0      1.0   \n",
+      "5 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
+      "6  0.181402  0.193122          1.0           1.0           0.0      0.0   \n",
+      "7 -0.120935 -0.289683          0.0           0.0           0.0      0.0   \n",
+      "8  1.693087  0.675926          0.0           0.0           0.0      0.0   \n",
+      "9  1.239582  0.917329          1.0           0.0           1.0      0.0   \n",
+      "\n",
+      "   City_NY  City_Seattle  \n",
+      "0      1.0           0.0  \n",
+      "1      0.0           0.0  \n",
+      "2      0.0           0.0  \n",
+      "3      0.0           0.0  \n",
+      "4      0.0           0.0  \n",
+      "5      1.0           0.0  \n",
+      "6      0.0           0.0  \n",
+      "7      0.0           1.0  \n",
+      "8      0.0           0.0  \n",
+      "9      0.0           0.0  \n",
       "\n",
       "✅ After Validating Categorical Column 'Gender':\n",
-      "         Age    Salary  Gender  City\n",
-      "0 -1.330283 -1.255292       1     4\n",
-      "1 -0.574440 -0.772487       0     3\n",
-      "2  0.181402  0.193122       0     1\n",
-      "3  0.937245  2.124340       1     2\n",
-      "4 -0.876777 -0.531085       0     3\n",
-      "5 -1.330283 -1.255292       1     4\n",
-      "6  0.181402  0.193122       1     1\n",
-      "7 -0.120935 -0.289683       0     5\n",
-      "8  1.693087  0.675926       0     0\n",
-      "9  1.239582  0.917329       1     2\n",
+      "         Age    Salary  Gender_Male  City_Chicago  City_Houston  City_LA  \\\n",
+      "0 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
+      "1 -0.574440 -0.772487          0.0           0.0           0.0      1.0   \n",
+      "2  0.181402  0.193122          0.0           1.0           0.0      0.0   \n",
+      "3  0.937245  2.124340          1.0           0.0           1.0      0.0   \n",
+      "4 -0.876777 -0.531085          0.0           0.0           0.0      1.0   \n",
+      "5 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
+      "6  0.181402  0.193122          1.0           1.0           0.0      0.0   \n",
+      "7 -0.120935 -0.289683          0.0           0.0           0.0      0.0   \n",
+      "8  1.693087  0.675926          0.0           0.0           0.0      0.0   \n",
+      "9  1.239582  0.917329          1.0           0.0           1.0      0.0   \n",
+      "\n",
+      "   City_NY  City_Seattle  \n",
+      "0      1.0           0.0  \n",
+      "1      0.0           0.0  \n",
+      "2      0.0           0.0  \n",
+      "3      0.0           0.0  \n",
+      "4      0.0           0.0  \n",
+      "5      1.0           0.0  \n",
+      "6      0.0           0.0  \n",
+      "7      0.0           1.0  \n",
+      "8      0.0           0.0  \n",
+      "9      0.0           0.0  \n",
       "✅ Cleaned data saved to: Q13_cleaned_standardized.csv\n"
      ]
     }
    ],
    "source": [
-    "# Ques_13.ipynb - Data Standardization & Validation\n",
+    "# Ques_13.ipynb - Data Standardization & Validation (Optimized Version)\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "# === Step 1: Generate or Load Sample Data ===\n",
     "def generate_sample_data():\n",
@@ -114,21 +127,23 @@
     "    return df\n",
     "\n",
     "\n",
-    "# === Step 4: Encode Categorical Data ===\n",
+    "# === Step 4: Encode Categorical Data using OneHotEncoder ===\n",
     "def encode_categorical_data(df, categorical_columns):\n",
-    "    \"\"\"Encode categorical columns using LabelEncoder.\"\"\"\n",
-    "    le = LabelEncoder()\n",
-    "    for col in categorical_columns:\n",
-    "        df[col] = le.fit_transform(df[col])\n",
+    "    \"\"\"Encode categorical columns using OneHotEncoder to avoid unseen labels.\"\"\"\n",
+    "    ohe = OneHotEncoder(drop='first', handle_unknown='ignore', sparse_output=False)  # Drop first to avoid multicollinearity\n",
+    "    encoded_array = ohe.fit_transform(df[categorical_columns])\n",
+    "    df_encoded = pd.DataFrame(encoded_array, columns=ohe.get_feature_names_out(categorical_columns))\n",
+    "    df = pd.concat([df, df_encoded], axis=1).drop(columns=categorical_columns)  # Concatenate one-hot encoded columns\n",
     "    return df\n",
     "\n",
     "\n",
     "# === Step 5: Validate Specific Columns ===\n",
     "def validate_column_values(df, column_name, valid_values):\n",
     "    \"\"\"Ensure that the values in a specific column are valid (e.g., valid categories).\"\"\"\n",
-    "    if not all(df[column_name].isin(valid_values)):\n",
+    "    if column_name in df.columns:\n",
     "        invalid_values = df[~df[column_name].isin(valid_values)]\n",
-    "        print(f\"⚠️ Invalid values found in column '{column_name}':\\n\", invalid_values)\n",
+    "        if not invalid_values.empty:\n",
+    "            print(f\"⚠️ Invalid values found in column '{column_name}':\\n\", invalid_values)\n",
     "    return df\n",
     "\n",
     "\n",
@@ -157,7 +172,7 @@
     "    df_standardized = standardize_data(df, numerical_columns)\n",
     "    print(\"\\n✅ After Standardizing Numerical Columns:\\n\", df_standardized)\n",
     "\n",
-    "    # Step 4: Encode categorical columns ('Gender' and 'City')\n",
+    "    # Step 4: Encode categorical columns ('Gender' and 'City') using OneHotEncoder\n",
     "    categorical_columns = ['Gender', 'City']\n",
     "    df_encoded = encode_categorical_data(df_standardized, categorical_columns)\n",
     "    print(\"\\n✅ After Encoding Categorical Columns:\\n\", df_encoded)\n",
@@ -172,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
