Add Ques_13.ipynb for data quality improvement techniques

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_13.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_13.ipynb
@@ -2,225 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔹 Original Data:\n",
-      "    Age  Salary  Gender     City\n",
-      "0   25   50000    Male       NY\n",
-      "1   30   60000  Female       LA\n",
-      "2   35   80000  Female  Chicago\n",
-      "3   40  120000    Male  Houston\n",
-      "4   28   65000  Female       LA\n",
-      "5   25   50000    Male       NY\n",
-      "6   35   80000    Male  Chicago\n",
-      "7   33   70000  Female  Seattle\n",
-      "8   45   90000  Female   Boston\n",
-      "9   42   95000    Male  Houston\n",
+      "🚀 Original Data:\n",
+      "    Age  Salary  Gender      City\n",
+      "0   25   50000    Male  New York\n",
+      "1   32   60000  Female     Paris\n",
+      "2   47   80000  Female    London\n",
+      "3   51   90000    Male  New York\n",
       "\n",
       "✅ After Standardizing Numerical Columns:\n",
-      "         Age    Salary  Gender     City\n",
-      "0 -1.330283 -1.255292    Male       NY\n",
-      "1 -0.574440 -0.772487  Female       LA\n",
-      "2  0.181402  0.193122  Female  Chicago\n",
-      "3  0.937245  2.124340    Male  Houston\n",
-      "4 -0.876777 -0.531085  Female       LA\n",
-      "5 -1.330283 -1.255292    Male       NY\n",
-      "6  0.181402  0.193122    Male  Chicago\n",
-      "7 -0.120935 -0.289683  Female  Seattle\n",
-      "8  1.693087  0.675926  Female   Boston\n",
-      "9  1.239582  0.917329    Male  Houston\n",
+      "         Age    Salary  Gender      City\n",
+      "0 -1.292419 -1.264911    Male  New York\n",
+      "1 -0.634460 -0.632456  Female     Paris\n",
+      "2  0.775452  0.632456  Female    London\n",
+      "3  1.151428  1.264911    Male  New York\n",
       "\n",
-      "✅ After Encoding Categorical Columns:\n",
-      "         Age    Salary  Gender_Male  City_Chicago  City_Houston  City_LA  \\\n",
-      "0 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
-      "1 -0.574440 -0.772487          0.0           0.0           0.0      1.0   \n",
-      "2  0.181402  0.193122          0.0           1.0           0.0      0.0   \n",
-      "3  0.937245  2.124340          1.0           0.0           1.0      0.0   \n",
-      "4 -0.876777 -0.531085          0.0           0.0           0.0      1.0   \n",
-      "5 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
-      "6  0.181402  0.193122          1.0           1.0           0.0      0.0   \n",
-      "7 -0.120935 -0.289683          0.0           0.0           0.0      0.0   \n",
-      "8  1.693087  0.675926          0.0           0.0           0.0      0.0   \n",
-      "9  1.239582  0.917329          1.0           0.0           1.0      0.0   \n",
-      "\n",
-      "   City_NY  City_Seattle  \n",
-      "0      1.0           0.0  \n",
-      "1      0.0           0.0  \n",
-      "2      0.0           0.0  \n",
-      "3      0.0           0.0  \n",
-      "4      0.0           0.0  \n",
-      "5      1.0           0.0  \n",
-      "6      0.0           0.0  \n",
-      "7      0.0           1.0  \n",
-      "8      0.0           0.0  \n",
-      "9      0.0           0.0  \n",
-      "\n",
-      "✅ After Validating Categorical Column 'Gender':\n",
-      "         Age    Salary  Gender_Male  City_Chicago  City_Houston  City_LA  \\\n",
-      "0 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
-      "1 -0.574440 -0.772487          0.0           0.0           0.0      1.0   \n",
-      "2  0.181402  0.193122          0.0           1.0           0.0      0.0   \n",
-      "3  0.937245  2.124340          1.0           0.0           1.0      0.0   \n",
-      "4 -0.876777 -0.531085          0.0           0.0           0.0      1.0   \n",
-      "5 -1.330283 -1.255292          1.0           0.0           0.0      0.0   \n",
-      "6  0.181402  0.193122          1.0           1.0           0.0      0.0   \n",
-      "7 -0.120935 -0.289683          0.0           0.0           0.0      0.0   \n",
-      "8  1.693087  0.675926          0.0           0.0           0.0      0.0   \n",
-      "9  1.239582  0.917329          1.0           0.0           1.0      0.0   \n",
-      "\n",
-      "   City_NY  City_Seattle  \n",
-      "0      1.0           0.0  \n",
-      "1      0.0           0.0  \n",
-      "2      0.0           0.0  \n",
-      "3      0.0           0.0  \n",
-      "4      0.0           0.0  \n",
-      "5      1.0           0.0  \n",
-      "6      0.0           0.0  \n",
-      "7      0.0           1.0  \n",
-      "8      0.0           0.0  \n",
-      "9      0.0           0.0  \n",
-      "✅ Cleaned data saved to: Q13_cleaned_standardized.csv\n"
+      "🎯 Final DataFrame After Encoding Categorical Columns:\n",
+      "         Age    Salary  Gender_Male  City_New York  City_Paris\n",
+      "0 -1.292419 -1.264911          1.0            1.0         0.0\n",
+      "1 -0.634460 -0.632456          0.0            0.0         1.0\n",
+      "2  0.775452  0.632456          0.0            0.0         0.0\n",
+      "3  1.151428  1.264911          1.0            1.0         0.0\n"
      ]
     }
    ],
    "source": [
-    "# Ques_13.ipynb - Data Standardization & Validation (Optimized Version)\n",
-    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "\n",
-    "# === Step 1: Generate or Load Sample Data ===\n",
-    "def generate_sample_data():\n",
-    "    \"\"\"Generates sample data with numerical and categorical columns.\"\"\"\n",
-    "    data = {\n",
-    "        'Age': [25, 30, 35, 40, 28, 25, 35, 33, 45, 42],\n",
-    "        'Salary': [50000, 60000, 80000, 120000, 65000, 50000, 80000, 70000, 90000, 95000],\n",
-    "        'Gender': ['Male', 'Female', 'Female', 'Male', 'Female', 'Male', 'Male', 'Female', 'Female', 'Male'],\n",
-    "        'City': ['NY', 'LA', 'Chicago', 'Houston', 'LA', 'NY', 'Chicago', 'Seattle', 'Boston', 'Houston']\n",
-    "    }\n",
-    "    return pd.DataFrame(data)\n",
+    "# Sample DataFrame\n",
+    "data = {\n",
+    "    'Age': [25, 32, 47, 51],\n",
+    "    'Salary': [50000, 60000, 80000, 90000],\n",
+    "    'Gender': ['Male', 'Female', 'Female', 'Male'],\n",
+    "    'City': ['New York', 'Paris', 'London', 'New York']\n",
+    "}\n",
     "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(\"🚀 Original Data:\\n\", df)\n",
     "\n",
-    "# === Step 2: Data Validation ===\n",
-    "def validate_data(df):\n",
-    "    \"\"\"Basic validation checks for input DataFrame.\"\"\"\n",
-    "    if df.empty:\n",
-    "        raise ValueError(\"DataFrame is empty. Please check the input source.\")\n",
-    "    if df.isnull().any().any():\n",
-    "        print(\"⚠️ Warning: Missing values detected in the dataset.\")\n",
-    "    return True\n",
-    "\n",
-    "\n",
-    "# === Step 3: Standardize Numerical Data ===\n",
-    "def standardize_data(df, numerical_columns):\n",
-    "    \"\"\"Standardize numerical columns using StandardScaler.\"\"\"\n",
+    "# Function to standardize numerical data\n",
+    "def standardize_data(df, columns):\n",
     "    scaler = StandardScaler()\n",
-    "    df[numerical_columns] = scaler.fit_transform(df[numerical_columns])\n",
-    "    return df\n",
+    "    df_copy = df.copy()\n",
+    "    df_copy[columns] = scaler.fit_transform(df_copy[columns])\n",
+    "    return df_copy\n",
     "\n",
+    "# Function to one-hot encode categorical data\n",
+    "def encode_categorical(df, columns):\n",
+    "    encoder = OneHotEncoder(sparse_output=False, drop='first')  # Use sparse_output for sklearn ≥ 1.2\n",
+    "    encoded = encoder.fit_transform(df[columns])\n",
+    "    encoded_df = pd.DataFrame(encoded, columns=encoder.get_feature_names_out(columns))\n",
+    "    df = df.drop(columns=columns).reset_index(drop=True)\n",
+    "    df_encoded = pd.concat([df.reset_index(drop=True), encoded_df], axis=1)\n",
+    "    return df_encoded\n",
     "\n",
-    "# === Step 4: Encode Categorical Data using OneHotEncoder ===\n",
-    "def encode_categorical_data(df, categorical_columns):\n",
-    "    \"\"\"Encode categorical columns using OneHotEncoder to avoid unseen labels.\"\"\"\n",
-    "    ohe = OneHotEncoder(drop='first', handle_unknown='ignore', sparse_output=False)  # Drop first to avoid multicollinearity\n",
-    "    encoded_array = ohe.fit_transform(df[categorical_columns])\n",
-    "    df_encoded = pd.DataFrame(encoded_array, columns=ohe.get_feature_names_out(categorical_columns))\n",
-    "    df = pd.concat([df, df_encoded], axis=1).drop(columns=categorical_columns)  # Concatenate one-hot encoded columns\n",
-    "    return df\n",
+    "# Step 1: Standardize numerical columns\n",
+    "numerical_columns = ['Age', 'Salary']\n",
+    "df_standardized = standardize_data(df, numerical_columns)\n",
+    "print(\"\\n✅ After Standardizing Numerical Columns:\\n\", df_standardized)\n",
     "\n",
-    "\n",
-    "# === Step 5: Validate Specific Columns ===\n",
-    "def validate_column_values(df, column_name, valid_values):\n",
-    "    \"\"\"Ensure that the values in a specific column are valid (e.g., valid categories).\"\"\"\n",
-    "    if column_name in df.columns:\n",
-    "        invalid_values = df[~df[column_name].isin(valid_values)]\n",
-    "        if not invalid_values.empty:\n",
-    "            print(f\"⚠️ Invalid values found in column '{column_name}':\\n\", invalid_values)\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "# === Step 6: Save Cleaned Data ===\n",
-    "def save_cleaned_data(df, path=\"Q13_cleaned_standardized.csv\"):\n",
-    "    \"\"\"Save the cleaned and standardized data to a CSV file.\"\"\"\n",
-    "    df.to_csv(path, index=False)\n",
-    "    print(f\"✅ Cleaned data saved to: {path}\")\n",
-    "\n",
-    "\n",
-    "# === MAIN EXECUTION ===\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Step 1: Load Data\n",
-    "    df = generate_sample_data()\n",
-    "    print(\"🔹 Original Data:\\n\", df)\n",
-    "\n",
-    "    # Step 2: Validate Data\n",
-    "    try:\n",
-    "        validate_data(df)\n",
-    "    except Exception as e:\n",
-    "        print(f\"❌ Validation Error: {e}\")\n",
-    "        exit(1)\n",
-    "\n",
-    "    # Step 3: Standardize numerical columns ('Age' and 'Salary')\n",
-    "    numerical_columns = ['Age', 'Salary']\n",
-    "    df_standardized = standardize_data(df, numerical_columns)\n",
-    "    print(\"\\n✅ After Standardizing Numerical Columns:\\n\", df_standardized)\n",
-    "\n",
-    "    # Step 4: Encode categorical columns ('Gender' and 'City') using OneHotEncoder\n",
-    "    categorical_columns = ['Gender', 'City']\n",
-    "    df_encoded = encode_categorical_data(df_standardized, categorical_columns)\n",
-    "    print(\"\\n✅ After Encoding Categorical Columns:\\n\", df_encoded)\n",
-    "\n",
-    "    # Step 5: Validate Categorical Columns ('Gender' with valid values ['Male', 'Female'])\n",
-    "    df_validated = validate_column_values(df_encoded, 'Gender', ['Male', 'Female'])\n",
-    "    print(\"\\n✅ After Validating Categorical Column 'Gender':\\n\", df_validated)\n",
-    "\n",
-    "    # Step 6: Save cleaned and processed data\n",
-    "    save_cleaned_data(df_validated)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Task B: Addressing Inconsistent Representations\n",
-    "\n",
-    "# 16. Standardizing Date Formats:\n",
-    "# - Identify and correct inconsistent date formats within the dataset.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 17. Pattern Matching for Consistency:\n",
-    "# - Standardize phone numbers to a specific pattern (e.g., (123) 456-7890).\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 18. Handling Mixed Case Text:\n",
-    "# - Convert all text entries to a consistent case (e.g., all uppercase).\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# Step 2: Encode categorical columns\n",
+    "categorical_columns = ['Gender', 'City']\n",
+    "df_encoded = encode_categorical(df_standardized, categorical_columns)\n",
+    "print(\"\\n🎯 Final DataFrame After Encoding Categorical Columns:\\n\", df_encoded)\n"
    ]
   }
  ],
