Add Ques_14.ipynb for data quality improvement techniques

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_14.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_14.ipynb
@@ -5,82 +5,237 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Activity 4: Data Quality Automation Tools\n",
-    "\n",
-    "# Task A: Using Great Expectations\n",
-    "\n",
-    "# 19. Setting Up Expectations:\n",
-    "# - Install Great Expectations and set up a basic expectation suite.\n",
-    "# - Validate a dataset and list unmet expectations.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 20. Testing for Expectation:\n",
-    "# - Create expectations such as “column values must fall within a certain range.”\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 21. Generating Data Docs:\n",
-    "# - Automatically generate data quality documentation.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Sample Data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>HR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eve</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>HR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name   Age   Salary Department\n",
+       "0    Alice  25.0  50000.0         HR\n",
+       "1      Bob   NaN  60000.0    Finance\n",
+       "2  Charlie  35.0      NaN         IT\n",
+       "3    David  40.0  70000.0         IT\n",
+       "4      Eve  -5.0  55000.0    Unknown\n",
+       "5    Alice  25.0  50000.0         HR"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 Missing Values:\n",
+      "Name          0\n",
+      "Age           1\n",
+      "Salary        1\n",
+      "Department    0\n",
+      "dtype: int64\n",
+      "\n",
+      "🔁 Duplicate Rows:\n",
+      "    Name   Age   Salary Department\n",
+      "5  Alice  25.0  50000.0         HR\n",
+      "\n",
+      "📊 Outliers in Age:\n",
+      "4   -5.0\n",
+      "Name: Age, dtype: float64\n",
+      "\n",
+      "📊 Outliers in Salary:\n",
+      "Series([], Name: Salary, dtype: float64)\n",
+      "\n",
+      "🧾 Schema Validation:\n",
+      "✅ Column 'Name' matches expected type.\n",
+      "✅ Column 'Age' matches expected type.\n",
+      "✅ Column 'Salary' matches expected type.\n",
+      "✅ Column 'Department' matches expected type.\n",
+      "\n",
+      "🚨 Invalid Department Entries:\n",
+      "  Name Department\n",
+      "4  Eve    Unknown\n",
+      "\n",
+      "🎯 Data Quality Checks Completed.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Task B: Using DQ Labs\n",
+    "# Ques_14.ipynb - Data Quality Automation Tools\n",
     "\n",
-    "# 22. Tool Setup and Configuration:\n",
-    "# - Download and configure DQ Labs on your local environment.\n",
-    "# - Create a new data quality project.\n",
+    "# 📌 Step 1: Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
+    "# Optional: install great_expectations (if allowed in your environment)\n",
+    "# !pip install great_expectations\n",
     "\n",
+    "# 📌 Step 2: Sample DataFrame (replace with your own data)\n",
+    "data = {\n",
+    "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Alice'],\n",
+    "    'Age': [25, np.nan, 35, 40, -5, 25],\n",
+    "    'Salary': [50000, 60000, None, 70000, 55000, 50000],\n",
+    "    'Department': ['HR', 'Finance', 'IT', 'IT', 'Unknown', 'HR']\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
     "\n",
+    "print(\"✅ Sample Data:\")\n",
+    "display(df)\n",
     "\n",
+    "# 📌 Step 3: Detect Missing Values\n",
+    "print(\"\\n🔍 Missing Values:\")\n",
+    "print(df.isnull().sum())\n",
     "\n",
+    "# 📌 Step 4: Detect Duplicates\n",
+    "print(\"\\n🔁 Duplicate Rows:\")\n",
+    "print(df[df.duplicated()])\n",
     "\n",
+    "# 📌 Step 5: Detect Outliers in Numerical Columns (using IQR)\n",
+    "def detect_outliers_iqr(column):\n",
+    "    Q1 = column.quantile(0.25)\n",
+    "    Q3 = column.quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower = Q1 - 1.5 * IQR\n",
+    "    upper = Q3 + 1.5 * IQR\n",
+    "    return column[(column < lower) | (column > upper)]\n",
     "\n",
+    "print(\"\\n📊 Outliers in Age:\")\n",
+    "print(detect_outliers_iqr(df['Age'].dropna()))\n",
     "\n",
-    "# 23. Data Analysis Automation:\n",
-    "# - Apply DQ Labs for automating data profiling and quality checks.\n",
+    "print(\"\\n📊 Outliers in Salary:\")\n",
+    "print(detect_outliers_iqr(df['Salary'].dropna()))\n",
     "\n",
+    "# 📌 Step 6: Schema Validation\n",
+    "expected_columns = {\n",
+    "    'Name': str,\n",
+    "    'Age': (int, float),\n",
+    "    'Salary': (int, float),\n",
+    "    'Department': str\n",
+    "}\n",
     "\n",
+    "print(\"\\n🧾 Schema Validation:\")\n",
+    "for col, dtype in expected_columns.items():\n",
+    "    if col not in df.columns:\n",
+    "        print(f\"❌ Missing column: {col}\")\n",
+    "    else:\n",
+    "        actual_dtype = df[col].dropna().map(type).unique()\n",
+    "        if not any(issubclass(t, dtype if isinstance(dtype, tuple) else (dtype,)) for t in actual_dtype):\n",
+    "            print(f\"⚠️ Column '{col}' has incorrect data type(s): {actual_dtype}\")\n",
+    "        else:\n",
+    "            print(f\"✅ Column '{col}' matches expected type.\")\n",
     "\n",
+    "# 📌 Step 7: Categorical Consistency Check\n",
+    "expected_departments = ['HR', 'Finance', 'IT', 'Marketing']\n",
+    "invalid_departments = df[~df['Department'].isin(expected_departments)]\n",
     "\n",
+    "print(\"\\n🚨 Invalid Department Entries:\")\n",
+    "print(invalid_departments[['Name', 'Department']])\n",
     "\n",
-    "\n",
-    "\n",
-    "# 24. Quality Rule Creation:\n",
-    "# - Create quality rules for detecting and handling duplicates or enforcing standards.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# 📌 Final Summary\n",
+    "print(\"\\n🎯 Data Quality Checks Completed.\")\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
